# nextalign

./: .clang-tidy  .cppcheck  .dockerignore  .env.example  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.prod  LICENSE  Makefile  README.md  conanfile.txt  docker-compose.prod.yml  docker-compose.yml  nodemon.benchmarks.json  nodemon.json
.circleci/: config.yml
data/example/: genemap.gff
scripts/: benchmarks.sh  build_locally.sh  format.sh  publish_docker_images.sh
scripts/lib/: .gdbexec
